--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ version = "0.1.0"
 description = "HWP/HWPX 파일을 읽고 변환하는 라이브러리 (hwp → txt, hwpx → md/txt)"
 readme = "README.md"
 requires-python = ">=3.9"
+license = {text = "MIT"}
 dependencies = [
     "olefile",
     "lxml",
